--- a/styles/widgets/generic/toolbar.generic.less
+++ b/styles/widgets/generic/toolbar.generic.less
@@ -192,7 +192,7 @@
 
 .dx-toolbar-button {
     .dx-menu {
-        .dx-menu-item-has-text.dx-menu-item-has-submenu {
+        .dx-menu-item {
             border: 1px solid transparent;
             border-radius: 4px;
 
