--- a/styles/widgets/material/toolbar.material.less
+++ b/styles/widgets/material/toolbar.material.less
@@ -14,16 +14,13 @@
 
 .dx-size-default() {
     @MATERIAL_TOOLBAR_HEIGHT: 76px;
-    @MATERIAL_TOOLBAR_MENU_TOP_PADDING: 7px;
-    @MATERIAL_TOOLBAR_MENU_BOTTOM_PADDING: 7px;
+    @MATERIAL_TOOLBAR_MENU_VERTICAL_PADDING: 7px;
 }
 
 .dx-size-compact() {
     @MATERIAL_TOOLBAR_HEIGHT: 56px;
-    @MATERIAL_TOOLBAR_MENU_TOP_PADDING: 5px;
-    @MATERIAL_TOOLBAR_MENU_BOTTOM_PADDING: 5px;
+    @MATERIAL_TOOLBAR_MENU_VERTICAL_PADDING: 5px;
 }
-
 
 @MATERIAL_TOOLBAR_PADDING: 0;
 @MATERIAL_TOOLBAR_ITEM_SPACING: 5px;
@@ -216,7 +213,7 @@
             height: @MATERIAL_BUTTON_HEIGHT;
 
             .dx-menu-item-content {
-                padding: @MATERIAL_TOOLBAR_MENU_TOP_PADDING @MATERIAL_MENU_HORIZONTAL_PADDING @MATERIAL_TOOLBAR_MENU_BOTTOM_PADDING;
+                padding: @MATERIAL_TOOLBAR_MENU_VERTICAL_PADDING @MATERIAL_MENU_HORIZONTAL_PADDING;
             }
 
             &.dx-menu-item-has-text.dx-menu-item-has-icon {
