Diagram - fix z-order of panels(toolbox/properties panel) and context menu/toolbox + refactoring

--- a/styles/widgets/common/diagram.less
+++ b/styles/widgets/common/diagram.less
@@ -323,6 +323,11 @@
     height: 64px;
 }
 
+.dx-diagram-touchbar-overlay,
+.dx-diagram-touch-context-toolbox .dx-popover-wrapper {
+    z-index: 1 !important; // stylelint-disable-line declaration-no-important
+}
+
 .dx-diagram-touchbar.dx-context-menu {
     .dx-menu-items-container {
         display: block;
