--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -720,7 +720,7 @@
 
     .dx-scheduler-timeline-week,
     .dx-scheduler-timeline-work-week,
-    .dx-scheduler-timeline-day.dx-scheduler-work-space-count,
+    .dx-scheduler-timeline-day,
     .dx-scheduler-timeline-month {
         .dx-scheduler-header-panel {
             .flex-container(row, nowrap);
