dxGantt: Add icons and hints to bars

--- a/styles/widgets/generic/gantt.generic.less
+++ b/styles/widgets/generic/gantt.generic.less
@@ -1,6 +1,7 @@
 @import (once) "./scrollView.generic.less";
 @import (once) "./treeList.generic.less";
 @import (once) "./splitter.generic.less";
+@import (once) "../base/gantt.less";
 
 @gantt_successor_background_color: white;
 
@@ -303,3 +304,5 @@
         background-color: @gantt-collapsable-row-bg;
     }
 }
+
+.gantt-icons-mixin(@base-text-color);
