--- a/styles/widgets/material/gantt.material.less
+++ b/styles/widgets/material/gantt.material.less
@@ -1,6 +1,7 @@
 @import (once) "./scrollView.material.less";
 @import (once) "./treeList.material.less";
 @import (once) "./splitter.material.less";
+@import (once) "../base/gantt.less";
 
 @gantt_successor_background_color: white;
 
@@ -265,3 +266,5 @@
         background-color: @gantt-collapsable-row-bg;
     }
 }
+
+.gantt-icons-mixin(@base-text-color);
