Remove extrernal style

--- a/styles/widgets/generic/toolbar.generic.less
+++ b/styles/widgets/generic/toolbar.generic.less
@@ -197,7 +197,8 @@
             border-radius: 4px;
 
             .dx-menu-item-content {
-                padding: @GENERIC_TOOLBAR_MENU_TOP_PADDING @GENERIC_MENU_ITEM_PADDING_BASE @GENERIC_TOOLBAR_MENU_BOTTOM_PADDING;
+                padding-top: @GENERIC_TOOLBAR_MENU_TOP_PADDING;
+                padding-bottom: @GENERIC_TOOLBAR_MENU_BOTTOM_PADDING;
                 line-height: 0;
 
                 .dx-menu-item-text {
