--- a/styles/widgets/material/toolbar.material.less
+++ b/styles/widgets/material/toolbar.material.less
@@ -213,7 +213,8 @@
             height: @MATERIAL_BUTTON_HEIGHT;
 
             .dx-menu-item-content {
-                padding: @MATERIAL_TOOLBAR_MENU_VERTICAL_PADDING @MATERIAL_MENU_HORIZONTAL_PADDING;
+                padding-top: @MATERIAL_TOOLBAR_MENU_VERTICAL_PADDING;
+                padding-bottom: @MATERIAL_TOOLBAR_MENU_VERTICAL_PADDING;
             }
 
             &.dx-menu-item-has-text.dx-menu-item-has-icon {
