Improve themes and fix test

--- a/styles/widgets/generic/gantt.generic.less
+++ b/styles/widgets/generic/gantt.generic.less
@@ -1,7 +1,7 @@
+@import (once) "../base/gantt.less";
 @import (once) "./scrollView.generic.less";
 @import (once) "./treeList.generic.less";
 @import (once) "./splitter.generic.less";
-@import (once) "../base/gantt.less";
 
 @gantt_successor_background_color: white;
 
@@ -305,4 +305,4 @@
     }
 }
 
-.gantt-icons-mixin(@base-text-color);
+.gantt-icons-mixin(@datagrid-columnchooser-item-color);
