--- a/styles/widgets/generic/gantt.generic.less
+++ b/styles/widgets/generic/gantt.generic.less
@@ -1,3 +1,4 @@
+@import (once) "../base/gantt.less";
 @import (once) "./scrollView.generic.less";
 @import (once) "./treeList.generic.less";
 @import (once) "./splitter.generic.less";
@@ -303,3 +304,5 @@
         background-color: @gantt-collapsable-row-bg;
     }
 }
+
+.gantt-icons-mixin(@datagrid-columnchooser-item-color);
