dxGantt: Fix toolbar items

--- a/styles/widgets/generic/color-schemes/carmine/generic.carmine.less
+++ b/styles/widgets/generic/color-schemes/carmine/generic.carmine.less
@@ -1624,6 +1624,7 @@
 @gantt-collapsable-row-bg: darken(@base-bg, 5%);
 @gantt-selection-bg: fade(@datagrid-selection-bg, 25%);
 @gantt-parent-task-bg: @base-success;
+@gantt-icon-color: lighten(@base-text-color, 20%);
 
 // Splitter
 @splitter-inactive-color: @base-border-color;
