--- a/styles/widgets/generic/color-schemes/contrast/generic.contrast.less
+++ b/styles/widgets/generic/color-schemes/contrast/generic.contrast.less
@@ -1538,6 +1538,7 @@
 @gantt-collapsable-row-bg: lighten(@base-bg, 5%);
 @gantt-selection-bg: fade(@datagrid-selection-bg, 30%);
 @gantt-parent-task-bg: @base-success;
+@gantt-icon-color: @base-text-color;
 
 // Splitter
 @splitter-inactive-color: @base-border-color;
