--- a/styles/widgets/generic/color-schemes/dark/generic.dark.less
+++ b/styles/widgets/generic/color-schemes/dark/generic.dark.less
@@ -1632,6 +1632,7 @@
 @gantt-collapsable-row-bg: lighten(@base-bg, 5%);
 @gantt-selection-bg: @datagrid-selection-bg;
 @gantt-parent-task-bg: @base-success;
+@gantt-icon-color: darken(@base-text-color, 20%);
 
 // Splitter
 @splitter-inactive-color: @base-border-color;
