--- a/styles/widgets/generic/color-schemes/darkviolet/generic.darkviolet.less
+++ b/styles/widgets/generic/color-schemes/darkviolet/generic.darkviolet.less
@@ -1630,6 +1630,7 @@
 @gantt-collapsable-row-bg: lighten(@base-bg, 4%);
 @gantt-selection-bg: fade(@datagrid-selection-bg, 30%);
 @gantt-parent-task-bg: @base-success;
+@gantt-icon-color: darken(@base-text-color, 20%);
 
 // Splitter
 @splitter-inactive-color: @base-border-color;
