--- a/styles/widgets/generic/color-schemes/light/generic.light.less
+++ b/styles/widgets/generic/color-schemes/light/generic.light.less
@@ -1623,6 +1623,7 @@
 @gantt-collapsable-row-bg: darken(@base-bg, 4%);
 @gantt-selection-bg: @datagrid-selection-bg;
 @gantt-parent-task-bg: @base-success;
+@gantt-icon-color: lighten(@base-text-color, 20%);
 
 // Splitter
 @splitter-inactive-color: @base-border-color;
