--- a/styles/widgets/material/color-schemes/material.light.less
+++ b/styles/widgets/material/color-schemes/material.light.less
@@ -1532,6 +1532,7 @@
 
 // Gantt
 @gantt-collapsable-row-bg: darken(@base-bg, 5%);
+@gantt-icon-color: @datagrid-columnchooser-item-color;
 
 // Splitter
 @splitter-inactive-color: @base-border-color;
