--- a/styles/widgets/generic/color-schemes/darkmoon/generic.darkmoon.less
+++ b/styles/widgets/generic/color-schemes/darkmoon/generic.darkmoon.less
@@ -1643,6 +1643,7 @@
 @gantt-collapsable-row-bg: lighten(@base-bg, 4%);
 @gantt-selection-bg: fade(@datagrid-selection-bg, 30%);
 @gantt-parent-task-bg: @base-danger;
+@gantt-icon-color: darken(@base-text-color, 20%);
 
 // Splitter
 @splitter-inactive-color: @base-border-color;
