--- a/styles/widgets/generic/color-schemes/greenmist/generic.greenmist.less
+++ b/styles/widgets/generic/color-schemes/greenmist/generic.greenmist.less
@@ -1631,6 +1631,7 @@
 @gantt-collapsable-row-bg: darken(@base-bg, 4%);
 @gantt-selection-bg: fade(@datagrid-selection-bg, 25%);
 @gantt-parent-task-bg: @base-success;
+@gantt-icon-color: lighten(@base-text-color, 15%);
 
 // Splitter
 @splitter-inactive-color: @base-border-color;
