--- a/styles/widgets/material/color-schemes/material.dark.less
+++ b/styles/widgets/material/color-schemes/material.dark.less
@@ -1573,6 +1573,7 @@
 
 // Gantt
 @gantt-collapsable-row-bg: lighten(@base-bg, 5%);
+@gantt-icon-color: @datagrid-columnchooser-item-color;
 
 // Splitter
 @splitter-inactive-color: @base-border-color;
