Fix nested problem

--- a/styles/widgets/generic/tabPanel.generic.less
+++ b/styles/widgets/generic/tabPanel.generic.less
@@ -2,9 +2,11 @@
 @import (once) "./tabs.generic.less";
 
 .dx-tabpanel {
-    .dx-tabs-scrollable {
-        .dx-tabs-wrapper {
-            border-bottom: none;
+    & > .dx-tabs {
+        .dx-tabs-scrollable {
+            .dx-tabs-wrapper {
+                border-bottom: none;
+            }
         }
     }
 
