Replace numbers on constants

--- a/styles/widgets/generic/toolbar.generic.less
+++ b/styles/widgets/generic/toolbar.generic.less
@@ -193,8 +193,8 @@
 .dx-toolbar-button {
     .dx-menu {
         .dx-menu-item {
-            border: 1px solid transparent;
-            border-radius: 4px;
+            border: @GENERIC_BUTTON_BORDER_WEIGHT solid transparent;
+            border-radius: @button-border-radius;
 
             .dx-menu-item-content {
                 padding-top: @GENERIC_TOOLBAR_MENU_TOP_PADDING;
