--- a/styles/widgets/generic/tabPanel.generic.less
+++ b/styles/widgets/generic/tabPanel.generic.less
@@ -2,9 +2,27 @@
 @import (once) "./tabs.generic.less";
 
 .dx-tabpanel {
-    .dx-tabs-scrollable {
-        .dx-tabs-wrapper {
-            border-bottom: none;
+    .dx-tabpanel-tabs {
+        .dx-tabs {
+            border-bottom: @GENERIC_TABS_BORDER;
+        }
+
+        .dx-tabs-scrollable {
+            .dx-tabs-wrapper {
+                border-bottom: none;
+            }
+
+            .dx-tab.dx-state-hover:not(.dx-tab-selected):before {
+                content: "";
+                pointer-events: none;
+                position: absolute;
+                left: 0;
+                right: 0;
+                z-index: 2;
+                height: 0;
+                border-bottom: @GENERIC_TABS_BORDER;
+                bottom: 0;
+            }
         }
     }
 
@@ -15,20 +33,6 @@
 
         .dx-empty-collection& {
             border-top: none;
-        }
-    }
-
-    .dx-tabpanel-tabs .dx-tabs {
-        &:before {
-            content: "";
-            display: block;
-            position: absolute;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            height: 0;
-            border-bottom: 1px solid @tabs-border-color;
-            z-index: 1;
         }
     }
 
@@ -49,11 +53,7 @@
         z-index: 2;
         height: 0;
         border-bottom: 1px solid @tabs-tab-selected-bg;
-        bottom: 0;
-    }
-
-    .dx-tab-selected:after {
-        bottom: 0;
+        bottom: -1px;
     }
 
     .dx-tabs-wrapper {
@@ -62,9 +62,7 @@
 
     &.dx-state-focused {
         .dx-tabpanel-tabs .dx-tabs {
-            &:before {
-                border-bottom: @GENERIC_TAB_FOCUS_BORDER;
-            }
+            border-bottom: @GENERIC_TAB_FOCUS_BORDER;
         }
 
         .dx-multiview-wrapper {
@@ -76,11 +74,19 @@
             border-right: @GENERIC_TAB_FOCUS_BORDER;
             border-left: @GENERIC_TAB_FOCUS_BORDER;
         }
+
+        .dx-tabpanel-tabs {
+            .dx-tabs-scrollable {
+                .dx-tab.dx-state-hover:not(.dx-tab-selected):before {
+                    border-bottom: @GENERIC_TAB_FOCUS_BORDER;
+                }
+            }
+        }
     }
 
     .dx-multiview-wrapper {
-        border-left: 1px solid @tabs-border-color;
-        border-right: 1px solid @tabs-border-color;
-        border-bottom: 1px solid @tabs-border-color;
+        border-left: @GENERIC_TABS_BORDER;
+        border-right: @GENERIC_TABS_BORDER;
+        border-bottom: @GENERIC_TABS_BORDER;
     }
 }
