--- a/styles/widgets/generic/fileManager.generic.less
+++ b/styles/widgets/generic/fileManager.generic.less
@@ -175,6 +175,8 @@
         &.dx-filemanager-details {
             .dx-filemanager-details-item-thumbnail {
                 font-size: @GENERIC_BASE_ICON_SIZE;
+                width: @GENERIC_BASE_ICON_SIZE;
+                height: @GENERIC_BASE_ICON_SIZE;
             }
 
             .dx-datagrid .dx-datagrid-content .dx-datagrid-table .dx-command-select {
