--- a/styles/widgets/material/fileManager.material.less
+++ b/styles/widgets/material/fileManager.material.less
@@ -172,6 +172,8 @@
         &.dx-filemanager-details {
             .dx-filemanager-details-item-thumbnail {
                 font-size: @MATERIAL_BASE_ICON_SIZE;
+                width: @MATERIAL_BASE_ICON_SIZE;
+                height: @MATERIAL_BASE_ICON_SIZE;
             }
 
             .dx-datagrid .dx-datagrid-content .dx-datagrid-table {
