dxGantt: Fix page hanging problem (T856646)

--- a/styles/widgets/common/gantt.less
+++ b/styles/widgets/common/gantt.less
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    width: 100%;
 
     .dx-gantt-main-wrapper {
         display: flex;
@@ -46,6 +47,7 @@
         -webkit-user-select: none; // stylelint-disable-line property-no-vendor-prefix
         user-select: none;
         width: 100%;
+        min-width: 1px;
 
         .dx-gantt-tac-hb {
             margin-top: -1px;
