FileManager for Knockout - ViewModel binding doesn't work (T861302)

--- a/styles/widgets/common/fileManager.less
+++ b/styles/widgets/common/fileManager.less
@@ -22,7 +22,8 @@
         flex-direction: column;
     }
 
-    .dx-filemanager-notification-drawer {
+    .dx-filemanager-notification-drawer,
+    .dx-filemanager-notification-drawer-panel {
         height: 100%;
     }
 
@@ -170,6 +171,10 @@
         border-top: 1px solid;
         box-sizing: border-box;
         overflow: hidden;
+
+        .dx-filemanager-adaptivity-drawer-panel {
+            height: 100%;
+        }
 
         .dx-filemanager-dirs-panel {
             padding: 5px 10px;
