--- a/styles/widgets/generic/toolbar.generic.less
+++ b/styles/widgets/generic/toolbar.generic.less
@@ -208,3 +208,18 @@
         }
     }
 }
+
+.dx-toolbar-hidden-button-group {
+    .dx-toolbar-item-auto-hide {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .dx-buttongroup-wrapper {
+        .dx-buttongroup-item.dx-button {
+            .dx-button-content {
+                padding: @GENERIC_TOOLBAR_ITEM_SPACING 2 * @GENERIC_TOOLBAR_ITEM_SPACING;
+            }
+        }
+    }
+}
