Fixes the issue
(cherry picked from commit 3687fd5936f0fd578eec20de7eaf35769f96f7ed)

--- a/styles/widgets/common/gridBase.less
+++ b/styles/widgets/common/gridBase.less
@@ -826,7 +826,11 @@
             border-top: 0;
             border-bottom: 0;
 
-            & > td {
+            & > td,
+            & > td.dx-command-expand,
+            & > td.dx-command-select,
+            & > td.dx-command-edit,
+            & > td.dx-command-adaptive {
                 padding-top: 0;
                 padding-bottom: 0;
             }
