--- a/styles/widgets/common/gridBase.less
+++ b/styles/widgets/common/gridBase.less
@@ -892,16 +892,12 @@
             }
         }
 
-        .dx-@{widgetName}-table .dx-freespace-row,
-        .dx-@{widgetName}-table .dx-virtual-row {
+        .dx-@{widgetName}-table .dx-row.dx-freespace-row,
+        .dx-@{widgetName}-table .dx-row.dx-virtual-row {
             border-top: 0;
             border-bottom: 0;
 
-            & > td,
-            & > td.dx-command-expand,
-            & > td.dx-command-select,
-            & > td.dx-command-edit,
-            & > td.dx-command-adaptive {
+            & > td {
                 padding-top: 0;
                 padding-bottom: 0;
             }
