Fix group-header paddings and font-size

--- a/styles/widgets/generic/scheduler.generic.less
+++ b/styles/widgets/generic/scheduler.generic.less
@@ -33,7 +33,7 @@
     @GENERIC_SCHEDULER_APPOINTMENT_RECURRENCE_CONTENT_PADDING_RTL: 5px 7px 5px 25px;
 
     @GENERIC_SCHEDULER_AGENDA_APPOINTMENT_FONT_SIZE: 16px;
-    @GENERIC_SCHEDULER_GROUP_HEADER_AGENDA_FONT_SIZE: 18px;
+    @GENERIC_SCHEDULER_GROUP_HEADER_AGENDA_FONT_SIZE: 14px;
     @GENERIC_SCHEDULER_GROUP_HEADER_TABLE_CELL_WIDTH: 80px;
     @GENERIC_SCHEDULER_APPOINTMENT_TRANSPARENT_LEFT_BORDER: 3px solid transparent;
     @GENERIC_SCHEDULER_APPOINTMENT_TRANSPARENT_RIGHT_BORDER: 2px solid transparent;
@@ -93,6 +93,7 @@
 
 @SCHEDULER_FIRST_OF_MONTH_BORDER: 1px solid @SCHEDULER_FIRST_MONTH_BORDER_COLOR;
 
+@GENERIC_SCHEDULER_AGENDA_GROUP_HEADER_PADDING: 14px 0 0 10px;
 .scheduler-mixin();
 
 .dx-scheduler-time-panel-cell {
@@ -654,6 +655,8 @@
 
     .dx-scheduler-group-header-content {
         width: @GENERIC_SCHEDULER_GROUP_HEADER_TABLE_CELL_WIDTH;
+        text-align: left;
+        padding: @GENERIC_SCHEDULER_AGENDA_GROUP_HEADER_PADDING;
     }
 
     .dx-scheduler-agenda-group-mixin(@GENERIC_SCHEDULER_GROUP_HEADER_TABLE_CELL_WIDTH);
