--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -2144,6 +2144,7 @@
         .dx-scheduler-time-panel-cell,
         .dx-scheduler-date-table-cell {
             border: none;
+            box-shadow: inset 0 -1px 0 0 @SCHEDULER_BASE_BORDER_COLOR;
         }
 
         &.dx-scheduler-work-space-grouped {
