--- a/styles/widgets/generic/scheduler.generic.less
+++ b/styles/widgets/generic/scheduler.generic.less
@@ -657,6 +657,19 @@
         width: @GENERIC_SCHEDULER_GROUP_HEADER_TABLE_CELL_WIDTH;
         text-align: left;
         padding: @GENERIC_SCHEDULER_AGENDA_GROUP_HEADER_PADDING;
+        box-shadow: inset 0 -1px 0 0 @SCHEDULER_ACCENT_BORDER_COLOR;
+    }
+
+    .dx-scheduler-time-panel-cell,
+    .dx-scheduler-date-table-cell {
+        box-shadow: inset 0 -1px 0 0 @SCHEDULER_BASE_BORDER_COLOR;
+    }
+
+    .dx-scheduler-date-table-last-row {
+        .dx-scheduler-time-panel-cell,
+        .dx-scheduler-date-table-cell {
+            box-shadow: inset 0 -1px 0 0 @SCHEDULER_ACCENT_BORDER_COLOR;
+        }
     }
 
     .dx-scheduler-agenda-group-mixin(@GENERIC_SCHEDULER_GROUP_HEADER_TABLE_CELL_WIDTH);
