--- a/styles/widgets/common/toolbar.less
+++ b/styles/widgets/common/toolbar.less
@@ -130,6 +130,14 @@
         right: auto;
         left: 0;
     }
+
+    .dx-toolbar-hidden-button-group {
+        .dx-buttongroup-wrapper {
+            .dx-buttongroup-item {
+                text-align: right;
+            }
+        }
+    }
 }
 
 .dx-toolbar-menu-section:empty {
@@ -182,13 +190,9 @@
     .dx-buttongroup-wrapper {
         flex-direction: column;
 
-        .dx-buttongroup-item.dx-button {
+        .dx-buttongroup-item {
             border: none;
             text-align: left;
-
-            //&.dx-state-hover {
-            //    background-color: rgba(0, 0, 0, 0);
-            //}
         }
     }
 }
