DataGrid - Fixes freeSpace row resizing on virtual row rendering (T881439) (#12854)

--- a/styles/widgets/common/gridBase.less
+++ b/styles/widgets/common/gridBase.less
@@ -821,8 +821,8 @@
             }
         }
 
-        .dx-@{widgetName}-table .dx-freespace-row,
-        .dx-@{widgetName}-table .dx-virtual-row {
+        .dx-@{widgetName}-table .dx-row.dx-freespace-row,
+        .dx-@{widgetName}-table .dx-row.dx-virtual-row {
             border-top: 0;
             border-bottom: 0;
 
