Fixe left column width

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -65,6 +65,7 @@
 @SCHEDULER_RECURRENCE_ICON_OFFSET: 20px;
 
 @SCHEDULER_AGENDA_APPOINTMENT_FONT_SIZE: 16px;
+@SCHEDULER_AGENDA_LEFT_COLUMN_WIDTH: 70px;
 
 @SCHEDULER_SMALL_SIZE_FACTOR: 0.5;
 @SCHEDULER_SMALL_FONT_SIZE: 14px;
@@ -120,7 +121,7 @@
 
 .set-offset-agenda-group-mixin(@offset) {
     .dx-scheduler-date-table {
-        margin-right: -@offset - @SCHEDULER_LEFT_COLUMN_WIDTH;
+        margin-right: -@offset - @SCHEDULER_AGENDA_LEFT_COLUMN_WIDTH;
 
         .dx-scheduler-small & {
             margin-left: -@offset * @SCHEDULER_SMALL_SIZE_FACTOR;
@@ -136,18 +137,18 @@
     }
 
     .dx-scheduler-scrollable-appointments {
-        padding-left: @offset + @SCHEDULER_LEFT_COLUMN_WIDTH;
+        padding-left: @offset + @SCHEDULER_AGENDA_LEFT_COLUMN_WIDTH;
 
         .dx-scheduler-small & {
-            padding-left: @offset * @SCHEDULER_SMALL_SIZE_FACTOR + @SCHEDULER_LEFT_COLUMN_WIDTH * @SCHEDULER_SMALL_SIZE_FACTOR;
+            padding-left: @offset * @SCHEDULER_SMALL_SIZE_FACTOR + @SCHEDULER_AGENDA_LEFT_COLUMN_WIDTH * @SCHEDULER_SMALL_SIZE_FACTOR;
         }
 
         .dx-rtl & {
             padding-left: 0;
-            padding-right: @offset + @SCHEDULER_LEFT_COLUMN_WIDTH;
+            padding-right: @offset + @SCHEDULER_AGENDA_LEFT_COLUMN_WIDTH;
 
             .dx-scheduler-small & {
-                padding-right: @offset * @SCHEDULER_SMALL_SIZE_FACTOR + @SCHEDULER_LEFT_COLUMN_WIDTH * @SCHEDULER_SMALL_SIZE_FACTOR;
+                padding-right: @offset * @SCHEDULER_SMALL_SIZE_FACTOR + @SCHEDULER_AGENDA_LEFT_COLUMN_WIDTH * @SCHEDULER_SMALL_SIZE_FACTOR;
             }
         }
     }
@@ -2093,15 +2094,15 @@
         }
 
         .dx-scheduler-scrollable-appointments {
-            padding-left: @SCHEDULER_LEFT_COLUMN_WIDTH;
+            padding-left: @SCHEDULER_AGENDA_LEFT_COLUMN_WIDTH;
 
             .dx-scheduler-small & {
                 &.dx-rtl {
                     padding-left: 0;
-                    padding-right: @SCHEDULER_LEFT_COLUMN_WIDTH * @SCHEDULER_SMALL_SIZE_FACTOR;
+                    padding-right: @SCHEDULER_AGENDA_LEFT_COLUMN_WIDTH * @SCHEDULER_SMALL_SIZE_FACTOR;
                 }
 
-                padding-left: @SCHEDULER_LEFT_COLUMN_WIDTH * @SCHEDULER_SMALL_SIZE_FACTOR;
+                padding-left: @SCHEDULER_AGENDA_LEFT_COLUMN_WIDTH  * @SCHEDULER_SMALL_SIZE_FACTOR;
             }
 
             width: 100%;
@@ -2111,19 +2112,6 @@
         .dx-scheduler-appointment {
             position: relative;
             box-shadow: none;
-        }
-
-        .dx-scheduler-time-panel {
-            margin-top: 0;
-        }
-
-        .dx-scheduler-time-panel-row {
-            &:first-child {
-                .dx-scheduler-time-panel-cell {
-                    padding-top: 0;
-                    padding-bottom: 0;
-                }
-            }
         }
 
         .dx-scheduler-time-panel-cell {
@@ -2139,6 +2127,11 @@
             margin-top: 0;
             height: 100%;
             float: left;
+        }
+
+        .dx-scheduler-time-panel {
+            margin-top: 0;
+            width: @SCHEDULER_AGENDA_LEFT_COLUMN_WIDTH;
         }
 
         .dx-scheduler-time-panel-cell,
@@ -2183,17 +2176,12 @@
             border-left: none;
             border-right: none;
             font-size: @SCHEDULER_GROUP_HEADER_AGENDA_FONT_SIZE;
-            font-weight: normal;
+            font-weight: bold;
             padding: 0;
 
             .dx-scheduler-small & {
                 width: @SCHEDULER_GROUP_HEADER_TABLE_CELL_WIDTH * @SCHEDULER_SMALL_SIZE_FACTOR;
                 font-size: @SCHEDULER_SMALL_FONT_SIZE;
-            }
-
-            &[rowspan='2'],
-            &[rowspan='3'] {
-                font-weight: bold;
             }
         }
 
