--- a/styles/widgets/generic/scheduler.generic.less
+++ b/styles/widgets/generic/scheduler.generic.less
@@ -93,7 +93,7 @@
 
 @SCHEDULER_FIRST_OF_MONTH_BORDER: 1px solid @SCHEDULER_FIRST_MONTH_BORDER_COLOR;
 
-@GENERIC_SCHEDULER_AGENDA_GROUP_HEADER_PADDING: 14px 0 0 10px;
+@GENERIC_SCHEDULER_AGENDA_GROUP_HEADER_PADDING: 7px 0 0 10px;
 .scheduler-mixin();
 
 .dx-scheduler-time-panel-cell {
@@ -658,6 +658,11 @@
         text-align: left;
         padding: @GENERIC_SCHEDULER_AGENDA_GROUP_HEADER_PADDING;
         box-shadow: inset 0 -1px 0 0 @SCHEDULER_ACCENT_BORDER_COLOR;
+    }
+
+    .dx-scheduler-time-panel-cell {
+        text-align: left;
+        padding-top: 7px;
     }
 
     .dx-scheduler-time-panel-cell,
