--- a/styles/widgets/generic/scheduler.generic.less
+++ b/styles/widgets/generic/scheduler.generic.less
@@ -93,7 +93,9 @@
 
 @SCHEDULER_FIRST_OF_MONTH_BORDER: 1px solid @SCHEDULER_FIRST_MONTH_BORDER_COLOR;
 
-@GENERIC_SCHEDULER_AGENDA_GROUP_HEADER_PADDING: 7px 0 0 10px;
+@GENERIC_SCHEDULER_AGENDA_TIME_CELL_PADDING: 10px;
+@GENERIC_SCHEDULER_AGENDA_GROUP_HEADER_PADDING: @GENERIC_SCHEDULER_AGENDA_TIME_CELL_PADDING 0 0 10px;
+
 .scheduler-mixin();
 
 .dx-scheduler-time-panel-cell {
@@ -662,7 +664,7 @@
 
     .dx-scheduler-time-panel-cell {
         text-align: left;
-        padding-top: 7px;
+        padding-top: @GENERIC_SCHEDULER_AGENDA_TIME_CELL_PADDING;
     }
 
     .dx-scheduler-time-panel-cell,
