Declare month view rows count as constant.

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -17,7 +17,8 @@
 @SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT: @SCHEDULER_WORKSPACE_DATE_TABLE_CELL_HEIGHT * 0.5;
 @SCHEDULER_VERTICAL_GROUPED_ALL_DAY_TABLE_CELL_HEIGHT: @SCHEDULER_WORKSPACE_DATE_TABLE_CELL_HEIGHT;
 @SCHEDULER_VERTICAL_GROUP_HEADER_CONTENT_TOP_OFFSET: 16px;
-@SCHEDULER_MONTH_WORKSPACE_DATE_TABLE_HEIGHT: @SCHEDULER_WORKSPACE_DATE_TABLE_CELL_HEIGHT * 6;
+@SCHEDULER_MONTH_WORKSPACE_ROWS_COUNT: 6;
+@SCHEDULER_MONTH_WORKSPACE_DATE_TABLE_HEIGHT: @SCHEDULER_WORKSPACE_DATE_TABLE_CELL_HEIGHT * @SCHEDULER_MONTH_WORKSPACE_ROWS_COUNT;
 
 @SCHEDULER_GROUP_HEADER_TABLE_CELL_HEIGHT: 30px;
 
