Refix - Set "min-height" for scrollable container instead of height. Extend tests.

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -1005,7 +1005,7 @@
         }
 
         .dx-scheduler-date-table-scrollable .dx-scrollable-content {
-            height: @SCHEDULER_MONTH_WORKSPACE_DATE_TABLE_HEIGHT;
+            min-height: @SCHEDULER_MONTH_WORKSPACE_DATE_TABLE_HEIGHT;
         }
 
         .dx-scheduler-date-table-cell {
