Fix icon size issue for material theme

--- a/styles/widgets/material/toolbar.material.less
+++ b/styles/widgets/material/toolbar.material.less
@@ -178,6 +178,10 @@
 
     .dx-button-content {
         padding: 4px;
+
+        .dx-icon {
+            .dx-icon-sizing(@MATERIAL_BASE_ICON_SIZE);
+        }
     }
 
     .dx-toolbar-item-auto-hide {
