fix toolbar icons issues

--- a/styles/widgets/material/toolbar.material.less
+++ b/styles/widgets/material/toolbar.material.less
@@ -181,6 +181,8 @@
 
         .dx-icon {
             .dx-icon-sizing(@MATERIAL_BASE_ICON_SIZE);
+
+            color: @toolbar-color;
         }
     }
 
