Fix timeline group header cell height + extend tests

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -1122,6 +1122,10 @@
             }
         }
 
+        .dx-scheduler-group-header {
+            min-height: @SCHEDULER_WORKSPACE_DATE_TABLE_CELL_HEIGHT;
+        }
+
         .dx-scheduler-group-header-content {
             overflow: visible;
             flex-grow: 1;
