--- a/styles/widgets/material/toolbar.material.less
+++ b/styles/widgets/material/toolbar.material.less
@@ -180,7 +180,7 @@
         padding: 4px;
 
         .dx-icon {
-            color: @toolbar-color;
+            /* color: @toolbar-color; */
             .dx-icon-sizing(@MATERIAL_BASE_ICON_SIZE);
         }
     }
