Fix translations to sass

--- a/styles/widgets/material/toolbar.material.less
+++ b/styles/widgets/material/toolbar.material.less
@@ -180,8 +180,8 @@
         padding: 4px;
 
         .dx-icon {
-            /* color: @toolbar-color; */
-            .dx-icon-sizing(@MATERIAL_BASE_ICON_SIZE);
+            color: @toolbar-color;
+            .dx-icon-sizing(@MATERIAL_BUTTON_ICON_SIZE);
         }
     }
 
