Rename css class

--- a/styles/widgets/common/textEditor.less
+++ b/styles/widgets/common/textEditor.less
@@ -65,7 +65,7 @@
 .dx-texteditor-input-container {
     .dx-editor-content-wrapper();
 
-    .dx-texteditor-collapsed-flex-layout & {
+    .dx-texteditor-collapsed & {
         flex-basis: 0;
     }
 }
